# symphainy-prod

./: .cursorrules  .gitattributes  .gitignore  AGENT_B_TASK_INFRASTRUCTURE.md  CONTRIBUTING.md  CONTROL_TOWER_MODERNIZATION_PLAN.md  Dockerfile.experience  Dockerfile.realms  Dockerfile.runtime  Dockerfile.smart-city  FRONTEND_BACKEND_INTEGRATION_ANALYSIS.md  LICENSE  QUICK_TEST_GUIDE.md  README.md  README_SCRIPTS.md  SHELL_TROUBLESHOOTING.md  TESTING_CHECKLIST.md  TESTING_HANDOFF.md  check_all_logs.sh  check_boundary_contracts.sql  check_runtime_logs.sh  cleanup.sh  docker-compose.fullstack.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.backup  experience_main.py  main.py  otel-collector-config.yaml  prometheus-config.yaml  pyproject.toml  rebuild.sh  requirements-as2.txt  requirements.txt  runtime_main.py  smoke_test.sh  startup.sh  symphainy_platform  tempo-config.yaml  test_session_first_implementation.py  (+3 more)
.cursor/: migration-mapping.json  web-agent-config.json
archive_v1/: README.md  main_v1.py
civic_systems/: __init__.py
config/: env_contract.py  mvp_materialization_policy.yaml
docs/: 00_START_HERE.md  4_LAYER_MODEL_IMPLEMENTATION_GAP_ANALYSIS.md  ADAPTER_ABSTRACTION_MIGRATION_COMPLETE.md  ADAPTER_ABSTRACTION_MIGRATION_PROGRESS.md  ADMIN_DASHBOARD_AGENTIC_IDP_ALIGNMENT.md  AGENTIC_FORWARD_PATTERN_AUDIT.md  AGENTIC_FORWARD_PATTERN_IMPLEMENTATION_PLAN.md  AGENTIC_FORWARD_PATTERN_IMPLEMENTATION_SUMMARY.md  AGENTIC_SYSTEM_ALIGNMENT_PLAN.md  AGENTIC_SYSTEM_HOLISTIC_REFACTORING_PLAN.md  AGENT_4_LAYER_FIX_COMPLETE.md  AGENT_FIX_SUMMARY.md  (+259 more)
(+2677 files in other folders)
