[tool.poetry]
name = "symphainy-platform"
version = "0.1.0"
description = "Symphainy Platform - Agentic IDP + AOS"
authors = ["Symphainy Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
redis = "^5.0.0"
python-arango = "^7.6.0"
websockets = "^11.0.0"
httpx = "^0.24.0"
python-consul = "^1.1.0"

[tool.poetry.extras]
as2 = ["pyas2lib>=1.4.4"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.1.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
